changed flex wrap on project columns to fix tablet responsive issue

--- a/styles/style-prefixed.css
+++ b/styles/style-prefixed.css
@@ -335,5 +335,6 @@
     
     
               justify-content: center;
+              flex-wrap: wrap;
     }
   }
